--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -718,7 +718,7 @@ img {
 }
 
 .dark-theme .theme-toggle {
-	background-color: #6d9eeb;
+	background-color: #3e6ff4;
 	box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
 }
 
